--- a/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
+++ b/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-white active bg-gradient-primary" href="">
+                    <a class="nav-link text-white active bg-gradient-primary" asp-page="/Admin_Page/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">dashboard</i>
                         </div>
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./Amenities/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/Amenities/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">table_view</i>
                         </div>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./Facilities/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/Facilities/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">table_view</i>
                         </div>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./HostelAmenities/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/HostelAmenities/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">table_view</i>
                         </div>
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./HostelImages/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/HostelImages/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">receipt_long</i>
                         </div>
@@ -70,7 +70,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./Hostels/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/Hostels/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">receipt_long</i>
                         </div>
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./Members/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/Members/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">house</i>
                         </div>
@@ -86,7 +86,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " asp-page="./NearbyFacilities/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/NearbyFacilities/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">receipt_long</i>
                         </div>
