--- a/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
+++ b/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
@@ -138,8 +138,8 @@
                     <ul class="navbar-nav  justify-content-end">
                        
                         <li class="nav-item d-flex align-items-center">
-                            <span> Hello @u</span>
-                            <a asp-page="/Pages/Logout" class="nav-link text-body font-weight-bold px-0">
+                            <span style="margin-right:5px"> Hello @u </span>
+                            <a asp-page="/Logout" class="nav-link text-body font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
                                 <span class="d-sm-inline d-none">Sign out</span>
                             </a>
