--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Index.cshtml
@@ -6,12 +6,7 @@
 <div class="page-breadcrumb">
     <div class="row align-items-center">
         <div class="col-6">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-0 d-flex align-items-center">
-                    <li class="breadcrumb-item"><i class="mdi mdi-home-outline fs-4"></i></li>
-                    <li class="breadcrumb-item active" aria-current="page">Person</li>
-                </ol>
-            </nav>
+            
             <h1 class="mb-0 fw-bold">Hostel Management</h1>
         </div>
         <div class="col-6">
@@ -90,6 +85,10 @@
                                 <td>
                                     @{
                                         var typeOfUser = "";
+                                        @if (item.Status == 3)
+                                        {
+                                            typeOfUser = "Deleted";
+                                        }
                                         @if(item.Status == 2){
                                             typeOfUser = "Canceled";
                                         }
@@ -104,7 +103,14 @@
                                     } @typeOfUser
                                 </td>
                                 <td>
-                                    <a asp-page="./Detail" asp-route-id="@item.Id">Details</a>
+                                    @if (item.Status==1){
+                                        <a asp-page="./Detail" asp-route-id="@item.Id">Details</a>
+                                    }@if (item.Status == 0)
+                                    {
+                                        <a asp-page="./Approve" asp-route-id="@item.Id">Approve | </a> 
+                                        <a asp-page="./Cancel" asp-route-id="@item.Id">Cancel</a>
+                                    }
+                                    
                                 </td>
                             </tr>
                         }
