--- a/MyHostel_Admin/Pages/Admin_Page/Facilities/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Facilities/Index.cshtml
@@ -55,7 +55,7 @@
                                     @Html.DisplayFor(modelItem => item.UtilityName)
                                 </td>
                                 <td>
-                                    <a asp-page="./Edit" asp-route-id="@item.Id">Details</a>
+                                    <a asp-page="./Edit" asp-route-id="@item.Id">Update</a>
                                 </td>
                             </tr>
                         }
