--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Cancel.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Cancel.cshtml
@@ -1,4 +1,33 @@
 ﻿@page
 @model MyHostel_Admin.Pages.Admin_Page.Hostels.CancelModel
 @{
+    Layout = "_LayoutAdmin";
 }
+<div class="page-breadcrumb">
+    <div class="row align-items-center">
+        <div class="col-6">
+
+            <h1 class="mb-0 fw-bold">Reject Hostel</h1>
+        </div>
+        
+    </div>
+</div>
+
+<h3>Are you sure you want to cancel this hostel ?</h3>
+<div>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hostel.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hostel.Name)
+        </dd>
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="@Model.Hostel.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <button class="btn btn-danger" ><a asp-page="/Admin_Page/Hostels/Index">Back to List</a></button>
+    </form>
+</div>
