--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
@@ -208,7 +208,9 @@
                         <input id="search-input" type="text" placeholder="Enter your location" value="@Model.Hostel.DetailLocation">
                     </dd>
                 </dl>
-                <div id="map"></div>
+                <div id="map" style="width:500px;height:500px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14896.386253828618!2d105.79448930393843!3d21.028821919946317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab421ebbe0af%3A0xd36d8e52b92bd02d!2zMjAwIMSQLiBD4bqndSBHaeG6pXksIEzDoW5nIFRoxrDhu6NuZywgQmEgxJDDrG5oLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1681484883266!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
                 <br>
                 <form method="post">
                     <input type="hidden" asp-for="@Model.Hostel.Id" />
