--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
@@ -24,7 +24,7 @@
 
 </head>
 
-<body class="g-sidenav-show  bg-gray-200" onload="initMap(); searchPlace()">
+<body class="g-sidenav-show  bg-gray-200">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
         <div class="sidenav-header">
 
@@ -208,8 +208,7 @@
                         <input id="search-input" type="text" placeholder="Enter your location" value="@Model.Hostel.DetailLocation">
                     </dd>
                 </dl>
-                <div id="map" style="width:500px;height:500px;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14896.386253828618!2d105.79448930393843!3d21.028821919946317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab421ebbe0af%3A0xd36d8e52b92bd02d!2zMjAwIMSQLiBD4bqndSBHaeG6pXksIEzDoW5nIFRoxrDhu6NuZywgQmEgxJDDrG5oLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1681484883266!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div id="map" style="width:1000px;height:500px;">
                 </div>
                 <br>
                 <form method="post">
@@ -335,6 +334,8 @@
         }
     </script>
     <script>
+        window.onload= initMap();
+        //window.onload = searchPlace();
         function initMap() {
             // Create a new map object
             var map = new google.maps.Map(document.getElementById('map'), {
@@ -352,6 +353,7 @@
                     map.setCenter(pos);
                 });
             }
+            console.log("page is fully loaded");
         }
         function searchPlace() {
             var input = document.getElementById('search-input');
@@ -371,6 +373,7 @@
                 // Center the map on the selected location
                 map.setCenter({ lat: lat, lng: lng });
             });
+            console.log("page is fully loaded places");
         }
     </script>
     <!-- Github buttons -->
