--- a/MyHostel_Admin/Pages/Admin_Page/HostelImages/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/HostelImages/Index.cshtml
@@ -54,7 +54,7 @@
                                 </td>
                                 <td>
                                     @*@Html.DisplayFor(modelItem => item.Amenities.AmenitiyName)*@
-                                    <img src="@item.ImageUrl" />
+                                    <img style="width:70px;height=70px;" src="@item.ImageUrl" />
                                 </td>
                             </tr>
                         }
