--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
@@ -335,7 +335,7 @@
     </script>
     <script>
         window.onload= initMap();
-        //window.onload = searchPlace();
+        window.onload = searchPlace();
         function initMap() {
             // Create a new map object
             var map = new google.maps.Map(document.getElementById('map'), {
