--- a/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
@@ -57,7 +57,7 @@
                                     @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
                                 </td>
                                 <td>
-                                    <img src="item.Avatar" />
+                                    <img style="width:70px;height=70px;" src="item.Avatar" />
                                 </td>
                                 <td>
                                     @{
