--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Approve.cshtml
@@ -24,7 +24,7 @@
     <style >
         #map {
             height: 500px;
-            width : 500px;
+            width : 100%;
         }
 
         /*
