--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Index.cshtml
@@ -9,16 +9,19 @@
             
             <h1 class="mb-0 fw-bold">Hostel Management</h1>
         </div>
-        
+        <div class="col-6">
+            <form asp-page="./Index" method="post">
+                <div class="text-end upgrade-btn">
+                    <input style="width:20%" type="submit" value="Export" class="btn btn-primary" />
+                </div>
+            </form>            
+        </div>
     </div>
     <div class="row mt-3">
         <form asp-page="./Index" method="get" class="col-8">
             <div class="form-actions no-color">
                 <p>
-                    <input style="width:70%" type="text" name="searchString" value="@Model.CurrentFilter" class="btn btn-outline-primary" placeholder="Enter Hostel's name" />
-                    @*<input type="hidden" name="currentGender" value="@Model.CurrentGender" />
-                    <input type="hidden" name="currentType" value="@Model.CurrentType" />*@
-                    <input style="width:20%" type="submit" value="Search" class="btn btn-primary" />
+                    <input style="width:70%" type="text" name="searchString" value="@Model.CurrentFilter" class="btn btn-outline-primary" placeholder="Enter Hostel's name" />                    <input style="width:20%" type="submit" value="Search" class="btn btn-primary" />
                 </p>
             </div>
         </form>
