--- a/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
@@ -10,7 +10,13 @@
             
             <h1 class="mb-0 fw-bold">Members Management</h1>
         </div>
-        
+        <div class="col-6">
+            <form asp-page="./Index" method="post">
+                <div class="text-end upgrade-btn">
+                    <input style="width:20%" type="submit" value="Export" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
     <div class="row mt-3">
         <form asp-page="./Index" method="get" class="col-8">
