--- a/MyHostel_Admin/Pages/Admin_Page/Facilities/Edit.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Facilities/Edit.cshtml
@@ -11,7 +11,7 @@
         <div class="col-6">
             <div class="text-end upgrade-btn">
                 <a asp-page="./Delete" asp-route-id="@Model.Facility.Id" class="btn btn-danger text-white"
-                   onclick="return confirm('Chỉ có thể xóa nếu thể loại chưa có phim nào. Chắc chắn xóa?')">
+                   onclick="return confirm('Chắc chắn xóa?')">
                     Delete
                 </a>
             </div>
