--- a/MyHostel_Admin/Pages/Admin_Page/Amenities/Edit.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Amenities/Edit.cshtml
@@ -7,12 +7,12 @@
     <div class="row align-items-center">
         <div class="col-6">
             
-            <h1 class="mb-0 fw-bold">Edit Genre</h1>
+            <h1 class="mb-0 fw-bold">Edit Amenity</h1>
         </div>
         <div class="col-6">
             <div class="text-end upgrade-btn">
                 <a asp-page="./Delete" asp-route-id="@Model.Amenity.Id" class="btn btn-danger text-white"
-                   onclick="return confirm('Chỉ có thể xóa nếu thể loại chưa có phim nào. Chắc chắn xóa?')">
+                   onclick="return confirm('Chắc chắn xóa?')">
                     Delete
                 </a>
             </div>
